@@ -5,6 +5,9 @@ Changes for Crate-Java-Testing
 Unreleased
 ==========
 
+ * make crate instance directory configurable for removal after
+   test servers are stopped.
+
 2016/02/12 0.3.1
 ================
 
